(node)-Api_JWT create JWT autenticator, create Authenticator, create token
