# (node)-Api_JWT/src/routes/compliment.routes.ts
@@ -1,0 +1,11 @@
+import { CreateComplimentsController } from "@/controllers/CreateComplimentsController.ts";
+import { EnsureAuthenticated } from "@/middleware/ensureAuthenticated.ts";
+import { Router } from "express";
+
+
+const router = Router()
+
+const complimentController = new CreateComplimentsController()
+router.post('/compliments',EnsureAuthenticated, complimentController.handle)
+
+export default router
